# carla-sandbox

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  initialize.sh  postprocess_carla_objects.py  pyproject.toml  setup_opencood.sh  sub_mkdocs.yml
analysis/: analyze_last_results.ipynb  make_camera_bev_figure.ipynb  run_simulation.py
analysis/simulation/: __init__.py  agents.py  fov_estimator.py  replayer.py  simulator.py
carla_eggs/: download_carla13_py38_egg.sh
converter/: carla_to_coco.py  demo_carla_as_coco.ipynb  my_coco.py
converter/coco/: run_carla_to_coco.sh
docs/tutorials/: convert_to_coco.md
examples/: README.md  exec_leaderboard.py  exec_meta.py  exec_scenario_runner.py  exec_standard.py  manual_control.py  replay_last_run.py  run_a1_dataset_collection.sh  run_a2_aerial_dataset_collection.sh  run_a2_simple_two_vehicles.sh  run_a3_intersect_dataset_collection.sh  run_a3_intersect_dataset_collection_v1.sh  run_a3_intersect_dataset_collection_v2.sh  run_autopilot.sh  run_autopilot_camera_perception.sh  run_capture_data_infrastructure.sh  run_capture_data_random.sh  run_capture_data_scenariorunner.sh  run_d0_capture_data_ego_multi_sensor.sh  run_d0_capture_data_multi_sensor.sh  run_d0_capture_data_random.sh  run_d1_capture_data_ego_infrastructure.sh  run_d1_capture_data_infrastructure.sh  run_d1_capture_data_multi_agent.sh  run_following_gt_level2.sh  run_leaderboard_test.sh  run_localize_test.sh  run_mapbasedplanner.sh  run_simple_following_agent.sh  run_v0_go_straight_agent.sh  run_v2_simple_following_agent_lidar.sh  script_execute.sh  setup_for_leaderboard.bash  setup_for_scenario_runner.bash  setup_for_standard.bash
examples/dataset_aerial/: run_aerial_dataset_collection.sh
examples/dataset_egtr/: run_egtr_dataset_collection.sh  run_multi_egtr_dataset_collection.sh
examples/dataset_ground/: run_multi_ground_dataset_collection.sh
examples/dataset_intersect/: run_all_intersect_collects.sh  run_intersect_collect.sh
examples/dataset_multiview/: run_a4_multiview_dataset_collection.sh
examples/dataset_random/: run_a1_dataset_collection.sh  run_multi_random_dataset_collection.sh  run_random_dataset_collection.sh
examples/dataset_utsa/: download_utsa_dataset.sh  run_multi_utsa_dataset_collection.sh  run_utsa_dataset_collection.sh
examples/demos/: run_autopilot.sh
examples/old_examples/: __run_capture_data_random.sh
hooks/: pre-commit
install/: install_docker.sh  install_everything.sh  install_modules.sh  install_nvidia-docker.sh
notebooks/: agents.py  compute_dataset_stats.ipynb  make-collaborative-video.ipynb  make_mat_graphics.ipynb  make_visualization_plots.ipynb  networks.py  test_aerial_dataset.ipynb  test_bev_viz.py  test_carla_aerial.ipynb  test_carla_agent_dataset.ipynb  test_carla_collaborative.ipynb  test_carla_collaborative_tmp.ipynb  test_carla_dataset.ipynb  test_carla_sensor_dataset.ipynb  test_carla_trust.ipynb  test_intersect_dataset.ipynb  test_multi_agent_algorithms.ipynb  test_multi_sensor_algorithms.ipynb  test_perception_application.ipynb  test_soup.ipynb  test_soup_trust.ipynb  test_utsa_dataset.ipynb  utils.py  visualize_agent_placement.ipynb
run_carla/: _run_carla_bash.sh  run_carla_0911.sh  run_carla_0912.sh  run_carla_0913.sh
(+24 files in other folders)
