[tool.poetry]
name = "carla-sandbox"
version = "0.1.0-alpha.1"
description = "Sandbox for development with Carla simulator"
authors = ["Spencer Hallyburton <spencer.hallyburton@duke.edu>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://avstack.org"
repository = "https://github.com/avstack-lab/carla-sandbox"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
keywords = ["carla", "autonomy", "autonomous vehicles"]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "~3.8"
pygame = "^2.1"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.10.0%2Bcu113-cp38-cp38-linux_x86_64.whl" }
lib-avstack-api = { path = "submodules/lib-avstack-api", develop = true }
lib-avstack-core = { path = "submodules/lib-avstack-core", develop = true }

[build-system]
requires = [
    "poetry-core",
    "torch"
]
build-backend = "poetry.core.masonry.api"